center align names (prevent callum problem)

--- a/src/styles/Slider.scss
+++ b/src/styles/Slider.scss
@@ -88,7 +88,7 @@ $break-ipad: 769px;
             }
             &__streamername {
                 font-size: 1.5rem;
-                margin-left: 60px;
+                text-align: center;
                 color: lightgrey;
             }
         }
